Minor Issues fixed.

--- a/Frontend-Vuetify/index.html
+++ b/Frontend-Vuetify/index.html
@@ -4,20 +4,17 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="Urlaub Gegen Hand" />
+  <meta name="description" content="Urlaub Gegen Hand offers affordable travel by exchanging work for food and accommodation. Explore new cultures, contribute to communities, and gain unique experiences through volunteering on farms, housesitting, or NGO projects." />
+    <meta property="og:url" content="http://ugh.csdevhub.com:3000" />
+    <meta property="og:image" content="https://urlaub-gegen-hand.s3.eu-north-1.amazonaws.com/logo-desktop.svg">
   <title>Urlaub Gegen Hand</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
 </head>
 <body class="">
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
-  <!-- jQuery library -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-<!-- Popper JS -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> -->
-<!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
