changed port to 80

--- a/Frontend-Vuetify/index.html
+++ b/Frontend-Vuetify/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="Urlaub Gegen Hand" />
   <meta name="description" content="Urlaub Gegen Hand offers affordable travel by exchanging work for food and accommodation. Explore new cultures, contribute to communities, and gain unique experiences through volunteering on farms, housesitting, or NGO projects." />
-    <meta property="og:url" content="http://ugh.csdevhub.com:3000" />
+    <meta property="og:url" content="https://alreco.de" />
     <meta property="og:image" content="https://urlaub-gegen-hand.s3.eu-north-1.amazonaws.com/logo-desktop.svg">
   <title>Urlaub Gegen Hand</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
