Sorry not sorry: Touched 77 files to migrate from regional chaos to geographic precision
This commit implements a comprehensive migration from the legacy address system
(individual Street, HouseNumber, PostCode, City, State, Country fields) to a
modern geographic address system using OpenStreetMap/Nominatim integration.

Backend Changes:
- Added new Address entity with geographic coordinates (Latitude/Longitude)
- Implemented AddressType enum (Residential, Commercial, Tourism, Rural, Urban, Other)
- Created GeocodingController with search and reverse geocoding endpoints
- Added IGeocodingService interface and NominatimGeocodingService implementation
- Integrated OpenStreetMap/Nominatim API for address search and reverse geocoding
- Added AddressService with CRUD operations and automatic cleanup functionality
- Created AddressSearchResult and AddressSuggestion DTOs for API responses
- Migrated User model to use Address navigation property instead of individual fields
- Migrated Offer model to use Address navigation property for location data
- Updated ProfileController to create Address entities from UserData geographic coordinates
- Updated OfferController to handle addressLatitude, addressLongitude, and address components
- Fixed namespace migration from UGH.Infrastructure.Repositories to UGHApi.Repositories
- Resolved Entity Framework migration compatibility issues and duplicate using statements
- Fixed CORS middleware ordering (moved before authentication middleware)
- Added manual CORS headers for development environment compatibility
- Created comprehensive address validation and error handling

Frontend Changes:
- Created AddressMapPicker Vue component with full interactive map functionality
- Integrated Leaflet.js for OpenStreetMap visualization and user interaction
- Added real-time autocomplete address search with dropdown suggestions
- Implemented map clicking for reverse geocoding and address selection
- Added geolocation feature with 'Use my location' bu

--- a/Frontend-Vuetify/index.html
+++ b/Frontend-Vuetify/index.html
@@ -11,6 +11,7 @@
   <meta property="og:image" content="https://urlaub-gegen-hand.s3.eu-north-1.amazonaws.com/logo-desktop.svg">
   <title>Urlaub Gegen Hand</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="/error-display.js"></script>
 </head>
 <body class="">
   <div id="app"></div>
