--- a/Frontend-Vuetify/index.html
+++ b/Frontend-Vuetify/index.html
@@ -3,7 +3,7 @@
       xmlns:fb="http://ogp.me/ns/fb#">
   <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="Urlaub Gegen Hand" />
   <meta property="og:description" content="Entdecke neue Möglichkeiten des Reisens." />
